--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,10 @@ block layout-content
                 h3 Making the Best
                 h1 Food For Devs
             span.Details Access the WHATABYTE Team Portal
-        div.NavButtons 
-            a(href="/user")
-                div.NavButton Just dive in!
+        div.NavButtons
+            if isAuthenticated
+                a(href="/user")
+                    div.NavButton Just dive in!
+            else
+                a(href="/login")
+                    div.NavButton Log in
